Fix input outline causing whitespace

--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,7 @@
     border: 1px solid var(--form-border);
     border-radius: 3px;
     width: 100%;
+    outline: none;
   }
 
   input:invalid {
